--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -14,3 +14,21 @@
     font-family: inherit;
     text-decoration: underline;
 }
+
+@mixin authForm {
+    width: 60%;
+    margin: 3rem auto;
+    padding: 1.5rem 1rem;
+    border: 1px solid transparent;
+    border-radius: 5px;
+    box-shadow: 1px 2px 4px 3px #ccc;
+}
+
+@mixin authInput {
+    width: 50%;
+    margin: 2rem auto;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    text-align: center;
+}
